--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -48,11 +48,11 @@
     <!-- emailjs -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-      (function(){
-          emailjs.init("0IHmEyPs_EP6ffOwpz2DG");
-      })();
-    </script>
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("ScZD-gM0nfP2amhNg");
+   })();
+</script>
   </body>
 </html>
